add footer_box mobile and style css

--- a/theme/strawberry/mobile/skin/latest/shop_basic/style.css
+++ b/theme/strawberry/mobile/skin/latest/shop_basic/style.css
@@ -1,12 +1,18 @@
 @charset "utf-8";
 /* 새글 스킨 (latest) */
-.lat {border-top:1px solid #ddd;;position:relative;line-height:50px;padding:0 20px}
+.lat {display: block; position:relative;margin:0 auto;line-height:25px}
 .lat:after {display:block;visibility:hidden;clear:both;content:""} 
-.lat .bx-wrapper {float:left;width:75%;margin:0 0 10px;padding:0;list-style:none;}
-.lat li {text-overflow: ellipsis;overflow: hidden; white-space: nowrap;}
+.lat .bx-wrapper {float:left;margin:0 0 10px;padding:0;list-style:none;}
+
 .lat li .fa-heart{color:#ff0000}
 .lat li .new_icon{display:inline-block;padding: 0 3px;line-height:14px ;font-size:0.833em;color:#fff;background:#c56bed}
 .lat li .cnt_cmt{color:#ff3970}
 
-.lat_title h2 {display:block;;font-size:17px ;float:left;width:25%}
-.lat_title h3 {display:block;;font-size:17px;float:left;width:25%}
+
+.lat_title h2{display:block;;font-size:20px;float:left;width:100px}
+.lat_title h3{display:block;;font-size:15px;float:left;width:100px}
+
+
+.lat_more {position:absolute;top:0;right:0;color:#878787;z-index:19}
+
+.wr_date{display: block; float: right;}
