--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -179,7 +179,7 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_10 .sct_cost {margin:10px 0;font-size:22px;font-weight:bold;color: red; border-top: 1px solid #e5e5e5;}
 .sct_10 .sct_cost .sct_discount{display:inline-block;color:#999;font-size:0.92em;text-decoration:line-through;font-weight:normal}
 .sct_10 .sct_cost h3 {margin:10px 0;font-size:22px;font-weight:bold;color: red;}
-.sct_10 .sct_txt{margin: 10px 0;font-size: 18px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */}
+.sct_10 .sct_txt{margin: 10px 0;font-size: 18px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 *}
 .sct_10 .sct_txt h2 {margin: 10px 0;font-size: 15px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em; height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */}
 .sct_10 .sct_basic{color: #888;margin: 5px 0; font-size: 0.92em;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */}
 .sct_10 .sct_basic h3 {color: #888;margin: 5px 0;font-size: 0.92em;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */}
