--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -138,10 +138,10 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_10 .sct_img img{width:100%;height:auto;}
 .sct_10 .sct_clear{clear:both}
 .sct_10 .sct_id{margin:5px  10px;font-size:0.92em;color:#666 }
-.sct_10 .sct_txt{margin:10px 0;font-size:15px; font-weight:400; }
+.sct_10 .sct_txt{margin:10px 0;font-size:15px; font-weight:400; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_txt h2 {margin:10px 0;font-size:15px; font-weight:400; display: -webkit-box; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 
-.sct_10 .sct_basic{color:#888;margin:5px 0;font-size:0.92em}
+.sct_10 .sct_basic{color:#888;margin:5px 0;font-size:10px; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_basic h3 {color:#888;margin:5px 0;font-size:10px; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 
 .sct_10 .sct_cost{display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red; border-top: 2px solid #e5e5e5;}
