--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -105,9 +105,9 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 
 
 .main_wrap {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
-.main_wrap h1 {text-align:left;font-size:38px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap h1 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
 .main_wrap h2 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
-.main_wrap h3 {text-align:left;font-size:16px;letter-spacing:-0.1em;line-height:1em;color: #f9bb00 ;}
+.main_wrap h3 {text-align:left;font-size:13px;letter-spacing:-0.1em;line-height:1em;color: #f9bb00 ;}
 
 /* ##### main(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
 /* 공통 */
@@ -116,8 +116,8 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_wrap:after {display:block;visibility:hidden;clear:both;content:""}
 .sct_wrap header {margin:0 0 20px;zoom:1}
 
-.sct_wrap h1 {text-align:left;font-size:30px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
-.sct_wrap h2 {text-align:left;font-size:25px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
+.sct_wrap h1 {text-align:left;font-size:25px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
+.sct_wrap h2 {text-align:left;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
 .sct_wrap h2 a {text-decoration:none}
 
 
@@ -180,9 +180,9 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_10 .sct_cost .sct_discount{display:inline-block;color:#999;font-size:0.92em;text-decoration:line-through;font-weight:normal}
 .sct_10 .sct_cost h3 {margin:10px 0;font-size:22px;font-weight:bold;color: red;}
 .sct_10 .sct_txt{margin: 10px 0;font-size: 18px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
-.sct_10 .sct_txt h2 {margin: 10px 0;font-size: 15px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em;height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
-.sct_10 .sct_basic{color:#888;margin:5px 0;font-size:0.92em; line-height: 1.5em;height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
-.sct_10 .sct_basic h3 {color: #888;margin: 5px 0;font-size: 0.92em;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_txt h2 {margin: 10px 0;font-size: 13px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em;height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_basic{color:#888;margin:5px 0;font-size:11px; line-height: 1.5em;height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_basic h3 {color: #888;font-size: 11px;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_star {display:none; margin-top:5px;width:75px}
 .sct_10 .sct_star img{width:100%;height:auto}
 
@@ -851,7 +851,7 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 /*하단 */
 .footer_list {display: flex;flex-wrap: wrap;gap: 20px;max-width: 1240px;margin: 0 auto;padding: 15px;}
 .footer_div {flex: 1;width: calc(50% - 15px);padding: 30px;border-radius: 8px;border: 1px #ddd solid;box-sizing: border-box;display: inline-block;vertical-align: top;}
-.footer_div h3 {font-size: 20px; letter-spacing: -0.8px; color: #222; line-height: 22px; height: 22px; margin: 0 0 18px; display: flex; align-items: center; /* 아이콘과 텍스트를 수직 정렬 */ gap: 10px; /* 아이콘과 텍스트 간격 */}
+.footer_div h2 {font-size: 20px; letter-spacing: -0.8px; color: #222; line-height: 22px; height: 22px; margin: 0 0 18px; display: flex; align-items: center; /* 아이콘과 텍스트를 수직 정렬 */ gap: 10px; /* 아이콘과 텍스트 간격 */}
 .footer_div p {margin: 5px 0;font-size: 0.95em;color: #555;}
 .footer_div .phone {font-size: 24px;font-weight: 700;color: #00a139;line-height: 1;}
 .footer_div .bank { margin-bottom: 27px; font-size: 0.95em;color: #555;}
