update h1,h2,h3 and txt

--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -102,12 +102,21 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 #sbsk .cart_alafter {display:block;visibility:hidden;clear:both;content:""}
 #sbsk .cart_al strong{float:right;}
 
-
-
 .main_wrap {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
 .main_wrap h1 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
-.main_wrap h2 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
-.main_wrap h3 {text-align:left;font-size:13px;letter-spacing:-0.1em;line-height:1em;color: #f9bb00 ;}
+.main_wrap h2 {text-align:left;font-size:16px;letter-spacing:-0.1em;line-height:3em; color: #444;}
+.main_wrap h3 {text-align:left;font-size:13px;letter-spacing:-0.1em;line-height:1em;color: #666;}
+
+.main_wrap_real {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
+.main_wrap_real h1 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap_real h2 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em; color: #444;}
+.main_wrap_real h3 {text-align:left;font-size:13px;letter-spacing:-0.1em;line-height:3em;color: #666 ;}
+
+.main_wrap_story {position:relative;height:auto !important;margin:20px auto;width:1240px;zoom:1;}
+.main_wrap_story h1 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap_story h2 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:3em; color: #444;}
+.main_wrap_story h3 {text-align:left;font-size:16px;letter-spacing:-0.1em;line-height:1em;color: #666;}
+
 
 /* ##### main(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
 /* 공통 */
@@ -116,9 +125,10 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_wrap:after {display:block;visibility:hidden;clear:both;content:""}
 .sct_wrap header {margin:0 0 20px;zoom:1}
 
-.sct_wrap h1 {text-align:left;font-size:25px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
-.sct_wrap h2 {text-align:left;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
+.sct_wrap h1 {text-align:left;font-size:25px;letter-spacing:-0.1em;line-height:1em;}
+.sct_wrap h2 {text-align:left;font-size:16px;letter-spacing:-0.1em;line-height:3em; color: #444;}
 .sct_wrap h2 a {text-decoration:none}
+.sct_wrap h3 {text-align:left;font-size:13px;letter-spacing:-0.1em;line-height:1em;color: #666; }
 
 
 #sct {clear:both}
@@ -179,8 +189,8 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_10 .sct_cost {margin:10px 0;font-size:22px;font-weight:bold;color: red; border-top: 1px solid #e5e5e5;}
 .sct_10 .sct_cost .sct_discount{display:inline-block;color:#999;font-size:0.92em;text-decoration:line-through;font-weight:normal}
 .sct_10 .sct_cost h3 {margin:10px 0;font-size:22px;font-weight:bold;color: red;}
-.sct_10 .sct_txt{margin: 10px 0;font-size: 18px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
-.sct_10 .sct_txt h2 {margin: 10px 0;font-size: 13px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em;height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_txt{margin: 10px 0;font-size: 13px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_txt h2 {font-size: 13px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em;height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_basic{color:#888;margin:5px 0;font-size:11px; line-height: 1.5em;height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_basic h3 {color: #888;font-size: 11px;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_star {display:none; margin-top:5px;width:75px}
