--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -90,9 +90,19 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .styled-link {display: block;width: 100%; height: 40px;margin: 15px auto;background: #fff;border: 1px solid #eee;color: #333;font-size: 14px;font-weight: 500;line-height: 38px;text-align: center;}
 
 
-.main_wrap h1 {text-align:center;font-size:38px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em;}
-.main_wrap h2 {text-align:center;font-size:38px;margin:0 0 15px;letter-spacing:-0.1em;line-height:1em; padding: 15px;}
-.main_wrap h3 {text-align:center;font-size:16px;margin:0 0 35px;letter-spacing:-0.1em;line-height:1em; color: #f9bb00 ;}
+.main_wrap h1 {text-align:center;font-size:28px;margin:0 0 5px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap h2 {text-align:center;font-size:22px;margin:0 0 5px;letter-spacing:-0.1em;line-height:2em; color: #444;}
+.main_wrap h3 {text-align:center;font-size:18px;margin:0 0 10px;letter-spacing:-0.1em;line-height:1em; color: #666;}
+
+.main_wrap_real h1 {text-align:center;font-size:28px;margin:0 0 5px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap_real h2 {text-align:center;font-size:22px;margin:0 0 5px;letter-spacing:-0.1em;line-height:2em; color: #444;}
+.main_wrap_real h3 {text-align:center;font-size:18px;margin:0 0 10px;letter-spacing:-0.1em;line-height:2em; color: #666;}
+
+.main_wrap_story h1 {text-align:center;font-size:28px;margin:0 0 5px;letter-spacing:-0.1em;line-height:1em;}
+.main_wrap_story h2 {text-align:center;font-size:22px;margin:0 0 5px;letter-spacing:-0.1em;line-height:2em; color: #444;}
+.main_wrap_story h3 {text-align:center;font-size:18px;margin:0 0 10px;letter-spacing:-0.1em;line-height:1em; color: #666;}
+
+
 
 
 /* ##### maint.(nn).skin.php, list.(nn).skin.php 공통 적용 시작 ##### */
@@ -100,8 +110,9 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_wrap {margin:10px 0 ;zoom:1}
 .sct_wrap:after {display:block;visibility:hidden;clear:both;content:""}
 
-.sct_wrap h1 {text-align:center;font-size:38px;margin:10px 0 0; padding: 15px;}
-.sct_wrap h2 {text-align:center;font-size:20px;margin:20px 0 0 } 
+.sct_wrap h1 {text-align:center;font-size:28px;margin:0 0 5px; line-height:1em;}
+.sct_wrap h2 {text-align:center;font-size:22px;margin:0 0 5px; color: #444; line-height:2em;} 
+.sct_wrap h3 {text-align:center;font-size:18px;margin:0 0 10px; line-height:1em; color: #666;} 
 
 .sct {margin: 10px 0 ;padding:0;list-style:none;zoom:1;clear:both;}
 .sct:after {display:block;visibility:hidden;clear:both;content:""}
