--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -726,3 +726,11 @@ background:url(./img/select_bg.png) no-repeat right 50%}
 .footer_div .bank {margin-bottom: 20px;font-size: 14px;color: #555;}
 .footer_div .icon-text-group {display: flex;align-items: center;gap: 10px; /* 아이콘과 텍스트 간격 */}
 .footer_div .inline-text-group {flex-wrap: wrap; gap: 15px; /* 각 라인 사이 간격 */ align-items: center;}
+
+
+
+
+/* 리스트 */
+
+.list_title h1 {font-weight: 500;font-size: 18px;color: rgb(51, 51, 51);line-height: 25px; letter-spacing: -0.3px; text-align: center;}
+.list_title p {font-size: 12px;color: #555;margin-top: 5px; margin-bottom: 10px; text-align: center;}
