--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -867,3 +867,12 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .footer_div .bank { margin-bottom: 27px; font-size: 0.95em;color: #555;}
 .footer_div .icon-text-group {display: flex;align-items: center;gap: 10px; /* 아이콘과 텍스트 간격 */}
 .footer_div .inline-text-group { display: flex;flex-wrap: wrap;gap: 20px; /* 각 라인 사이 간격 */align-items: center;}
+
+
+
+
+
+/* 리스트 */
+
+.list_title h1 {font-weight: 500;font-size: 28px;color: rgb(51, 51, 51);line-height: 35px;letter-spacing: -1px; text-align: center;}
+.list_title p {font-size: 16px;color: #555;margin-top: 10px;margin-bottom: 20px; text-align: center;}
