--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -49,7 +49,7 @@ outline: none;
 
 /* 상단 레이아웃 */
 #hd {min-width:1200px;}
-#hd_h1 {position:absolute;font-size:0;line-height:0;overflow:hidden}
+#hd_h1 {position:absolute;font-size:0;text-indent:-9999em;line-height:0;overflow:hidden}
 #hd_qnb {border-bottom:1px solid #e9e9e9;background:#f2f5f9;zoom:1}
 #hd_qnb:after {display:block;visibility:hidden;clear:both;content:""}
 #hd_qnb h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
