--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -142,7 +142,8 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_icon .shop_icon_coupon{display:inline-block;background:#e7e0f6;padding: 0 5px;color:#9C27B0;line-height:20px;margin-right:2px;font-size:0.923em}
 
 /* 상품 목록 스킨 10 */
-.sct_10{margin:10px }
+.sct_10{ margin: 0 auto;
+    max-width: 1240px; }
 .sct_10 .sct_li {float:left;text-align:left;padding:10px;}
 .sct_10 .sct_li .li_wr{position:relative;}
 .sct_10 .sct_img{vertical-align:top}
@@ -150,13 +151,13 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_10 .sct_clear{clear:both}
 .sct_10 .sct_id{margin:5px  10px;font-size:0.92em;color:#666 }
 .sct_10 .sct_txt{margin:10px 0;font-size:15px; font-weight:400;}
-.sct_10 .sct_txt h2 {margin:10px 0;font-size:15px; font-weight:400; display: -webkit-box; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_txt h2 {margin:10px 0;font-size:15px; font-weight:400; display: -webkit-box; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; text-align: left;}
 
 .sct_10 .sct_basic{color:#888;margin:5px 0;font-size:10px;}
-.sct_10 .sct_basic h3 {color:#888;margin:5px 0;font-size:13px; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_basic h3 {color:#888;margin:5px 0;font-size:13px; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; text-align: left;}
 
-.sct_10 .sct_cost{display: block; font-weight:bold;margin:5px 0; font-size:13px; color: red; border-top: 2px solid #e5e5e5;}
-.sct_10 .sct_cost h3 {display: block; font-weight:bold;margin:5px 0; font-size:13px; color: red;}
+.sct_10 .sct_cost{display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red; border-top: 2px solid #e5e5e5;}
+.sct_10 .sct_cost h3 {display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red; text-align: left;}
 .sct_10 .sct_sns{margin:10px  0}
 .sct_10 .sct_icon {margin:5px 0 }
 
@@ -711,7 +712,7 @@ background:url(./img/select_bg.png) no-repeat right 50%}
 .review-item { padding: 10px;  width: calc(50% - 20px); /* 2개씩 배치. gap 크기를 감안해 20px 차감 */  box-sizing: border-box; /* 패딩 포함 크기 계산 */  margin: 0; /* 추가적인 마진 제거 */}
 .review-thumbnail img { width: 100%;height: auto;}
 .review-details {margin-top: 10px;}
-.review-title {font-weight: bold;margin-bottom: 5px;}
+.review-title {font-weight: bold;margin-bottom: 5px; font-size: 15px;}
 .review-score { color: #ff9900;font-size: 14px;}
 .review-author { color: #888; font-size: 12px;}
 
