--- a/theme/strawberry/css/default_shop.css
+++ b/theme/strawberry/css/default_shop.css
@@ -210,6 +210,9 @@ border-color: transparent transparent transparent rgba(0,0,0,0.7);}
     overflow: hidden;
     margin-bottom: 20px;             /* 각 카드 사이의 세로 간격 */
     transition: transform 0.3s ease;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .card img {
