--- a/theme/strawberry/mobile/skin/shop/basic/style.css
+++ b/theme/strawberry/mobile/skin/shop/basic/style.css
@@ -150,11 +150,34 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.2);}
 .sct_10 .sct_img img{width:100%;height:auto;}
 .sct_10 .sct_clear{clear:both}
 .sct_10 .sct_id{margin:5px  10px;font-size:0.92em;color:#666 }
-.sct_10 .sct_txt{margin:10px 0;font-size:15px; font-weight:400;}
-.sct_10 .sct_txt h2 {margin:10px 0;font-size:15px; font-weight:400; display: -webkit-box; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; text-align: left;}
+.sct_10 .sct_txt {
+    margin: 10px 0;
+    font-size: 15px;
+    font-weight: 400;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* 표시할 줄 수 */
+    -webkit-box-orient: vertical;
+    line-height: 2.0em; /* 한 줄의 높이 */
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-.sct_10 .sct_basic{color:#888;margin:5px 0;font-size:10px;}
-.sct_10 .sct_basic h3 {color:#888;margin:5px 0;font-size:13px; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; text-align: left;}
+.sct_10 .sct_txt h2 {
+    margin: 10px 0;
+    font-size: 15px;
+    font-weight: 400;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* 표시할 줄 수 */
+    -webkit-box-orient: vertical;
+    line-height: 2.0em; /* 한 줄의 높이 */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: left;
+}
+
+.sct_10 .sct_basic {color: #888;margin: 5px 0;font-size: 10px;}
+.sct_10 .sct_basic h3 {color: #888;margin: 5px 0;font-size: 13px;line-height: 2.0em; /* 한 줄의 높이 */height: 4.2em; /* 2줄 높이로 고정 */display: -webkit-box;-webkit-line-clamp: 2; /* 표시할 줄 수 */-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis;text-align: left;}
+
 
 .sct_10 .sct_cost{display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red; border-top: 2px solid #e5e5e5;}
 .sct_10 .sct_cost h3 {display: block; font-weight:bold;margin:5px 0; font-size:16px; color: red; text-align: left;}
