--- a/theme/strawberry/skin/shop/basic/style.css
+++ b/theme/strawberry/skin/shop/basic/style.css
@@ -73,12 +73,12 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 /*서브배너*/
 #sbn_side {position:relative;margin:30px 0}
 .sb_bn { display:none}
-.sb_bn img{width:100%;height:auto;}
+.sb_bn img{max-width: 1240px; margin: 0 auto;}
 #sbn_side h2{position:absolute;font-size:0;line-height:0;overflow:hidden}
 #sbn_side .bx-prev{display:block;float:left;background:url(img/btn_sb_prev.png) no-repeat 50% 50% #fff;width:15px;height:15px;text-indent:-999px;overflow:hidden;border:1px solid #ccc;}
 #sbn_side .bx-next{display:block;margin-left:-1px;float:left;background:url(img/btn_sb_next.png) no-repeat 50% 50% #fff;width:15px;height:15px;text-indent:-999px;overflow:hidden;border:1px solid #ccc;}
 #sbn_side .bx-pager{text-align:center;position:absolute;bottom:10px;right:10px}
-#sbn_side .bx-pager-item {display:inline-block}
+#sbn_side .bx-pager-item {display:none}
 #sbn_side .bx-pager-item a {display:block;width:7px;height:7px;text-indent:-999px;overflow:hidden;margin:0 5px;background:#000;border-radius:5px;opacity:0.3}
 #sbn_side .bx-pager-item .active{opacity:1}
 
@@ -193,7 +193,7 @@ box-shadow:0 5px 15px rgba(0, 0, 0, .2);}
 .sct_10 .sct_cost {margin:10px 0;font-size:22px;font-weight:bold;color: red; border-top: 1px solid #e5e5e5;}
 .sct_10 .sct_cost .sct_discount{display:inline-block;color:#999;font-size:0.92em;text-decoration:line-through;font-weight:normal}
 .sct_10 .sct_cost h3 {margin:10px 0;font-size:22px;font-weight:bold;color: red;}
-.sct_10 .sct_txt{margin: 10px 0;font-size: 13px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
+.sct_10 .sct_txt{margin: 10px 0;font-size: 13px;font-weight: 400;display: -webkit-box; -webkit-box-orient: vertical; line-height: 1.8em; /* 한 줄의 높이 */ height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden; }
 .sct_10 .sct_txt h2 {font-size: 13px;font-weight: 400;display: -webkit-box;-webkit-box-orient: vertical;line-height: 1.8em;height: 3.6em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_basic{color:#888;margin:5px 0;font-size:11px; line-height: 1.5em;height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
 .sct_10 .sct_basic h3 {color: #888;font-size: 11px;line-height: 1.5em; /* 줄 간격 설정 */height: 3em; /* 2줄 높이로 고정 */overflow: hidden;}
